[package]
name = "rateless-iblt"
version = "0.1.0"
edition = "2021"

[dependencies]
rand_core = "0.9"
zerocopy = { version = "0.8", default-features = false, features = ["derive"] }
rand_xoshiro = "0.7.0"
libm = "0.2.11"
blake3 = { version = "1.5.5", default-features = false }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
bytes = "1"
zerocopy-buf = { version = "0.2", git = "https://github.com/conradludgate/zerocopy-buf", branch = "v0.2.x" }
